[gd_scene load_steps=2 format=2]

[ext_resource path="res://Scenes/Components/Movement/DashComponent.gd" type="Script" id=1]

[node name="DashComponent" type="Node"]
script = ExtResource( 1 )

[node name="DashTimer" type="Timer" parent="."]
one_shot = true

[node name="CooldownTimer" type="Timer" parent="."]
one_shot = true

[node name="DelayTimer" type="Timer" parent="."]
one_shot = true
